src/compiletest/qcell-13.stderr
error[E0277]: `std::rc::Rc<i32>` cannot be sent between threads safely
   --> $DIR/qcell-13.rs:11:5
    |
11  |     std::thread::spawn(move || {    // Compile fail
    |     ^^^^^^^^^^^^^^^^^^ `std::rc::Rc<i32>` cannot be sent between threads safely
    |
    = help: within `[closure@$DIR/src/compiletest/qcell-13.rs:11:24: 13:6 owner:qcell::QCellOwner, cell:qcell::QCell<std::rc::Rc<i32>>]`, the trait `std::marker::Send` is not implemented for `std::rc::Rc<i32>`
    = note: required because it appears within the type `std::cell::UnsafeCell<std::rc::Rc<i32>>`
    = note: required because it appears within the type `qcell::QCell<std::rc::Rc<i32>>`
    = note: required because it appears within the type `[closure@$DIR/src/compiletest/qcell-13.rs:11:24: 13:6 owner:qcell::QCellOwner, cell:qcell::QCell<std::rc::Rc<i32>>]`
